--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
         <a href="#"><img class="container-imagem" src="cor.jpg" alt="Meu perfil"></a>
     </div>
     </header>
+    <section class="banner"><!--criar uma seção para fazermos-->
+        <h2 class="banner titulo">ja sabe onde começar?</h2><!--título do banner-->
+        <p class="banner-texto">Sherek is love, Sherek is life!</p><!-- a tag P cria um parágrafo-->
+        <input tyoe="search" class="banner-pesquia" placeholder="Qual será o proximo filme que você vai assistir?">
+        <!-- a tag INPUT do tipo EARCH cria um camp de busca-->
+         <!---->
 </body>
 </html>
